[build-system]
requires = [
  "scikit-build-core",
  "swig",
  "numpy"
]
build-backend = "scikit_build_core.build"

[project]
name = "phreeqcrm"
version = "0.3.8"
description = "A reaction module for transport simulators based on the geochemical model PHREEQC."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "numpy",
  "PyYAML",
]

[tool.scikit-build]
cmake.minimum-version = "3.22"
build.verbose = true
