##set(PhreeqcRM_DOCS ${PROJECT_SOURCE_DIR}/Doxygen/html/*)

##install(FILES ${PhreeqcRM_DOCS} DESTINATION ${CMAKE_INSTALL_DOCDIR})
##file(INSTALL DESTINATION ${CMAKE_INSTALL_DOCDIR} FILES_MATCHING PATTERN ${PROJECT_SOURCE_DIR}/Doxygen/html/*.*)
##file(INSTALL html/index.html DESTINATION ${CMAKE_INSTALL_DOCDIR})

##install(DIRECTORY html DESTINATION ${CMAKE_INSTALL_DOCDIR})
install(DIRECTORY html/ DESTINATION ${CMAKE_INSTALL_DOCDIR})

